--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.3.0",
+    "stringify-object": "^2.3.1",
     "underscore": "^1.8.3",
     "xlsx": "^0.8.0"
   },
