--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "find-remove": "^0.2.11",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
+    "mongo-migrate": "^0.1.0",
     "mongodb": "^2.1.18",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
