--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "find-remove": "^0.2.11",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
-    "mongo-migrate": "^0.1.0",
     "mongodb": "^2.1.18",
+    "mongodb-migrations": "^0.5.1",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
@@ -27,7 +27,6 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.3.0",
-    "stringify-object": "^2.3.1",
     "underscore": "^1.8.3",
     "xlsx": "^0.8.0"
   },
