--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# excel sheets that are uploaded in the system
+tmp/*
+
 # Dependency directories
 node_modules
 jspm_packages
