--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "find-remove": "^0.2.11",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
+    "moment-timezone": "^0.5.4",
     "mongodb": "^2.1.18",
     "mongodb-migrations": "^0.5.1",
     "mongoose": "^4.1.2",
