--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
+    "dateformat": "^1.0.12",
     "ejs": "^2.3.1",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.1.0",
