--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^1.9.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "promise": "^7.1.1",
     "serve-favicon": "^2.3.0",
     "underscore": "^1.8.3",
     "xlsx": "^0.8.0"
