--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
+    "bower": "^1.7.9",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
@@ -23,6 +24,7 @@
     "mongodb": "^2.1.18",
     "mongodb-migrations": "^0.5.1",
     "mongoose": "^4.1.2",
+    "mongoose-paginate": "^5.0.0",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
     "nodemon": "^1.9.2",
